[gd_scene load_steps=8 format=3 uid="uid://mexr2h8mul8h"]

[ext_resource type="Script" uid="uid://blgwus7rlvdhe" path="res://Stages/DeskTop/desk_top.gd" id="1_ktdgc"]
[ext_resource type="Texture2D" uid="uid://bmg446bdbhqha" path="res://Stages/DeskTop/DeskTop.png" id="2_1blhn"]
[ext_resource type="Texture2D" uid="uid://d13ffs185pydp" path="res://Stages/DeskTop/post-it.png" id="3_1blhn"]
[ext_resource type="StyleBox" uid="uid://3th3b5nn5d85" path="res://Shaders/btn-inventary-hover.tres" id="4_jw4lk"]
[ext_resource type="PackedScene" uid="uid://dyuowldo5ga43" path="res://Inventario/Llaves.tscn" id="4_l85fw"]
[ext_resource type="VideoStream" uid="uid://y7igxpmbi13l" path="res://Video/TheMovie.ogv" id="5_pneox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1blhn"]
content_margin_top = 9.0
content_margin_bottom = 9.0
bg_color = Color(0.19255564, 0.1925557, 0.19255558, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[node name="DesktopScene" type="Node2D"]
script = ExtResource("1_ktdgc")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DeskTop" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="DeskTop"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_1blhn")

[node name="PostItContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -97.0
offset_top = -332.0
offset_right = 337.0
offset_bottom = -5.0
size_flags_horizontal = 8

[node name="BtnLlaves" type="Button" parent="."]
offset_left = 232.0
offset_top = 7.0
offset_right = 312.0
offset_bottom = 103.0
theme_override_styles/hover = ExtResource("4_jw4lk")
metadata/_edit_use_anchors_ = true

[node name="Llaves" parent="BtnLlaves" instance=ExtResource("4_l85fw")]
position = Vector2(40.000046, 48)
scale = Vector2(0.3600012, 0.3600012)

[node name="Modal" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -642.0
offset_top = -356.5
offset_right = 639.0
offset_bottom = 356.5
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Modal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ModalBackground" type="TextureRect" parent="Modal/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24151054
anchor_top = 0.03558906
anchor_right = 0.7584895
anchor_bottom = 0.96441096
offset_right = -6.1035156e-05
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1blhn")
metadata/_edit_use_anchors_ = true

[node name="ModalContent" type="VBoxContainer" parent="Modal/Panel/ModalBackground"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.11392334
anchor_top = 0.18337731
anchor_right = 0.86624974
anchor_bottom = 0.88449496
offset_right = -25.838623
offset_bottom = 26.26416
grow_horizontal = 2
grow_vertical = 2
rotation = -0.054105207
metadata/_edit_use_anchors_ = true

[node name="ModalTitleLabel" type="Label" parent="Modal/Panel/ModalBackground/ModalContent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Card Title"

[node name="ModalInfoLabel" type="Label" parent="Modal/Panel/ModalBackground/ModalContent"]
custom_minimum_size = Vector2(460, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Card Info"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ModalCloseButton" type="Button" parent="Modal/Panel/ModalBackground/ModalContent"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_1blhn")
text = "Cerrar"

[node name="Monitor" type="Panel" parent="."]
z_index = 2000
offset_left = -68.0
offset_top = 44.0
offset_right = 55.0
offset_bottom = 132.0

[node name="Video" type="VideoStreamPlayer" parent="Monitor"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.010452968
anchor_top = -0.055194832
anchor_right = 0.97793263
anchor_bottom = 0.96298695
offset_left = -25.285713
offset_top = -20.142853
offset_right = 25.714287
offset_bottom = 18.257149
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(84.28571, 67.142845)
size_flags_horizontal = 4
size_flags_vertical = 4
stream = ExtResource("5_pneox")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BtnLlaves" to="." method="_on_btn_llaves_pressed"]
